# MAPITagsScraper.py

./: ReadMe.md  pyproject.toml
.ci/: pythonPackagesToInstallFromGit.txt
MAPITagsScraper/: Source.py  __init__.py  __main__.py  nameNormalizer.py
MAPITagsScraper/sources/: mfmy_mfoy.py  ptags.py
